--- a/Website/team.html
+++ b/Website/team.html
@@ -8,36 +8,33 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
     <body>
-        <div id="page-wrapper" style="background-color:rgb(66,134,244);">
-            <!-- Header -->
-            <header id="header" class="alt">
-                <h1>
-                    <a href="index.html">Frost</a>
-                     &nbsp;Principles of Engineering, Olin College
-                </h1>
-                <nav id="nav">
-                    <ul>
-                        <li>
-                            <a href="#" class="icon fa-angle-down">Learn More</a>
-                            <ul>
-                                <li><a href="generic.html">Generic</a></li>
-                                <li><a href="contact.html">Contact</a></li>
-                                <li><a href="elements.html">Elements</a></li>
-                                <li>
-                                    <a href="#">Submenu</a>
-                                    <ul>
-                                        <li><a href="#">Option One</a></li>
-                                        <li><a href="#">Option Two</a></li>
-                                        <li><a href="#">Option Three</a></li>
-                                        <li><a href="#">Option Four</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                        <li><a href="team.html" class="button">The Team</a></li>
-                    </ul>
-                </nav>
-            </header>
+        <div id="page-wrapper">
+			<!-- Header -->
+				<header id="header" class="alt" style="background-color:rgb(66,134,244);">
+					<nav id="nav">
+						<ul>
+                            <li><a href="index.html" class="button">Home</a></li>
+							<li><a href="team.html" class="button">The Team</a></li>
+                            <li>
+								<a href="#" class="icon fa-angle-down">Learn More</a>
+								<ul>
+									<li><a href="">Mechanical</a></li>
+									<li><a href="">Electrical</a></li>
+									<li><a href="">Software</a></li>
+									<li>
+										<a href="#">Submenu</a>
+										<ul>
+											<li><a href="#">Option One</a></li>
+											<li><a href="#">Option Two</a></li>
+											<li><a href="#">Option Three</a></li>
+											<li><a href="#">Option Four</a></li>
+										</ul>
+									</li>
+								</ul>
+							</li>
+						</ul>
+					</nav>
+				</header>
             <section id="main" class="container">
 
                 <section class="box special">
