added video to website

--- a/Website/index.html
+++ b/Website/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Alpha by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>STARK</title>
@@ -48,7 +44,7 @@
 					<h2>Frost</h2>
 					<p>The Snowball Catapult</p>
 					<ul class="actions">
-						<li><a href="#" class="button special">Watch Video</a></li>
+						<li><a href="project_video.html" class="button special" target="_blank">Watch Video</a></li>
 						<li><a href="#" class="button">Learn More</a></li>
 					</ul>
 				</section>
