added learn_more page

--- a/Website/generic.html
+++ b/Website/generic.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Generic - Alpha by HTML5 UP</title>
+		<title>Learn More</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -14,12 +14,12 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1><a href="index.html">Alpha</a> by HTML5 UP</h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#" class="icon fa-angle-down">Layouts</a>
+                            <li><a href="index.html" class="button">Home</a></li>
+							<li><a href="team.html" class="button">The Team</a></li>
+                            <li>
+								<a href="#" class="icon fa-angle-down">Learn More</a>
 								<ul>
 									<li><a href="generic.html">Generic</a></li>
 									<li><a href="contact.html">Contact</a></li>
@@ -35,11 +35,9 @@
 									</li>
 								</ul>
 							</li>
-							<li><a href="#" class="button">Sign Up</a></li>
 						</ul>
 					</nav>
 				</header>
-
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
@@ -47,7 +45,7 @@
 						<p>A generic page for every non-generic situation.</p>
 					</header>
 					<div class="box">
-						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
+						<span class="image featured"></span>
 						<h3>This is a subheading</h3>
 						<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p>
 						<div class="row">
@@ -89,21 +87,71 @@
                         </section>
                     </div>
                 </section>
+            
+                <div class="row">
+                    <div class="4u 12u(narrower)">
 
-			<!-- Footer -->
-				<footer id="footer">
-					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</footer>
+                        <section class="box special">
+                            <span class="image featured"><img src="images/people/CedricK.jpg" alt="" /></span>
+                            <h3>Cedric Kim</h3>
+                            <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat. testing testing </p>
+                            <ul class="actions">
+                                <li><a href="#" class="button alt">Personal Website</a></li>
+                            </ul>
+                        </section>
+
+                    </div>
+                    <div class="4u 12u(narrower)">
+
+                        <section class="box special">
+                            <span class="image featured"><img src="images/people/DanielD.jpg" alt="" /></span>
+                            <h3>Daniel Daugherty</h3>
+                            <p>Duck</p>
+                            <ul class="actions">
+                                <li><a href="#" class="button alt">Personal Website</a></li>
+                            </ul>
+                        </section>
+
+                    </div>
+                    <div class="4u 12u(narrower)">
+
+                        <section class="box special">
+                            <span class="image featured"><img src="images/people/JeremyG.jpg" alt="" /></span>
+                            <h3>Jeremy Garcia</h3>
+                            <p>Goose</p>
+                            <ul class="actions">
+                                <li><a href="#" class="button alt">Personal Website</a></li>
+                            </ul>
+                        </section>
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="4u 12u(narrower)">
+
+                        <section class="box special">
+                            <span class="image featured"><img src="images/people/KevinGuo.jpg" alt="" /></span>
+                            <h3>Kevin Guo</h3>
+                            <p>Duck</p>
+                            <ul class="actions">
+                                <li><a href="#" class="button alt">Personal Website</a></li>
+                            </ul>
+                        </section>
+
+                    </div>
+                    <div class="4u 12u(narrower)">
+
+                        <section class="box special">
+                            <span class="image featured"><img src="images/people/KevinZ.jpg" alt="" /></span>
+                            <h3>Kevin Zhang</h3>
+                            <p>Duck</p>
+                            <ul class="actions">
+                                <li><a href="#" class="button alt">Personal Website</a></li>
+                            </ul>
+                        </section>
+
+                    </div>
+                </div>
 
 		</div>
 
