--- a/Website/index.html
+++ b/Website/index.html
@@ -19,7 +19,7 @@
                             <li><a href="index.html" class="button">Home</a></li>
 							<li><a href="team.html" class="button">The Team</a></li>
                             <li>
-								<a href="#" class="icon fa-angle-down">Learn More</a>
+								<a href="learn_more.html" class="icon fa-angle-down">Learn More</a>
 								<ul>
 									<li><a href="generic.html">Generic</a></li>
 									<li><a href="contact.html">Contact</a></li>
@@ -45,7 +45,7 @@
 					<p>The Snowball Catapult</p>
 					<ul class="actions">
 						<li><a href="project_video.html" class="button special" target="_blank">Watch Video</a></li>
-						<li><a href="#" class="button">Learn More</a></li>
+						<li><a href="learn_more.html" class="button">Learn More</a></li>
 					</ul>
 				</section>
 		</div>
