--- a/Website/team.html
+++ b/Website/team.html
@@ -10,13 +10,13 @@
     <body>
         <div id="page-wrapper">
 			<!-- Header -->
-				<header id="header" class="alt" style="background-color:rgb(66,134,244);">
+				<header id="header">
 					<nav id="nav">
 						<ul>
                             <li><a href="index.html" class="button">Home</a></li>
 							<li><a href="team.html" class="button">The Team</a></li>
                             <li>
-								<a href="#" class="icon fa-angle-down">Learn More</a>
+								<a href="learn_more.html" class="icon fa-angle-down">Learn More</a>
 								<ul>
 									<li><a href="">Mechanical</a></li>
 									<li><a href="">Electrical</a></li>
@@ -37,77 +37,66 @@
 				</header>
             <section id="main" class="container">
 
-                <section class="box special">
-                    <header class="major">
-                        <h2>STARK Industries Asian Branch</h2>
-                        <p>We're Awesome</p>
-                    </header>
+                <header class="major">
+                    <h2>Team</h2>
+                    <p>We're Awesome</p>
+                </header>
+                
+                <section class="box alt">
+                    <h2>
+                        <span class="image left">
+                            <img src="images/people/CedricK_circle.png" alt>
+                        </span>
+                        Cedric Kim
+                    </h2>
+                    <h4>
+                        Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.
+                    </h4>
                 </section>
-
-                <div class="row">
-                    <div class="4u 12u(narrower)">
-
-                        <section class="box special">
-                            <span class="image featured"><img src="images/CedricK.jpg" alt="" /></span>
-                            <h3>Cedric Kim</h3>
-                            <p>Duck</p>
-                            <ul class="actions">
-                                <li><a href="#" class="button alt">Personal Website</a></li>
-                            </ul>
-                        </section>
-
-                    </div>
-                    <div class="4u 12u(narrower)">
-
-                        <section class="box special">
-                            <span class="image featured"><img src="images/DanielD.jpg" alt="" /></span>
-                            <h3>Daniel Daugherty</h3>
-                            <p>Duck</p>
-                            <ul class="actions">
-                                <li><a href="#" class="button alt">Personal Website</a></li>
-                            </ul>
-                        </section>
-
-                    </div>
-                    <div class="4u 12u(narrower)">
-
-                        <section class="box special">
-                            <span class="image featured"><img src="images/JeremyG.jpg" alt="" /></span>
-                            <h3>Jeremy Garcia</h3>
-                            <p>Goose</p>
-                            <ul class="actions">
-                                <li><a href="#" class="button alt">Personal Website</a></li>
-                            </ul>
-                        </section>
-
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="4u 12u(narrower)">
-
-                        <section class="box special">
-                            <span class="image featured"><img src="images/KevinGuo.jpg" alt="" /></span>
-                            <h3>Kevin Guo</h3>
-                            <p>Duck</p>
-                            <ul class="actions">
-                                <li><a href="#" class="button alt">Personal Website</a></li>
-                            </ul>
-                        </section>
-
-                    </div>
-                    <div class="4u 12u(narrower)">
-
-                        <section class="box special">
-                            <span class="image featured"><img src="images/KevinZ.jpg" alt="" /></span>
-                            <h3>Kevin Zhang</h3>
-                            <p>Duck</p>
-                            <ul class="actions">
-                                <li><a href="#" class="button alt">Personal Website</a></li>
-                            </ul>
-                        </section>
-
-                    </div>
-                </div>
+                <section class="box alt">
+                    <h2>
+                        <span class="image right">
+                            <img src="images/people/JeremyG_circle.png" alt>
+                        </span>
+                        Jeremy Garcia
+                    </h2>
+                    <h4>
+                        Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.
+                    </h4>
+                </section>
+                <section class="box alt">
+                    <h2>
+                        <span class="image left">
+                            <img src="images/people/DanielD_circle.png" alt>
+                        </span>
+                        Daniel Daugherty
+                    </h2>
+                    <h4>
+                        Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.
+                    </h4>
+                </section>
+                <section class="box alt">
+                    <h2>
+                        <span class="image right">
+                            <img src="images/people/KevinZ_circle.png" alt>
+                        </span>
+                        Kevin Zhang
+                    </h2>
+                    <h4>
+                        Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.
+                    </h4>
+                </section>
+                <section class="box alt">
+                    <h2>
+                        <span class="image left">
+                            <img src="images/people/KevinG_circle.png" alt>
+                        </span>
+                        Kevin Guo
+                    </h2>
+                    <h4>
+                        Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.
+                    </h4>
+                </section>
             </section>
         </div>
             <!-- Scripts -->
