website minor changes

--- a/Website/index.html
+++ b/Website/index.html
@@ -21,7 +21,7 @@
                             <li>
 								<a href="learn_more.html" class="icon fa-angle-down">Learn More</a>
 								<ul>
-									<li><a href="generic.html">Generic</a></li>
+									<li><a href="lidar.html">Lidar</a></li>
 									<li><a href="contact.html">Contact</a></li>
 									<li><a href="elements.html">Elements</a></li>
 									<li>
