--- a/Website/learn_more.html
+++ b/Website/learn_more.html
@@ -21,7 +21,7 @@
                             <li>
 								<a href="learn_more.html" class="icon fa-angle-down">Learn More</a>
 								<ul>
-									<li><a href="generic.html">Generic</a></li>
+									<li><a href="lidar.html">Lidar</a></li>
 									<li><a href="contact.html">Contact</a></li>
 									<li><a href="elements.html">Elements</a></li>
 									<li>
@@ -43,81 +43,82 @@
 				<section id="main" class="container">
 					<header>
 						<h2>Systems</h2>
-						<p>A generic page for every non-generic situation.</p>
+						<p>stuff</p>
 					</header>
+                    <div class="row">
+                        <div class = "12u">
+                            <section class="tiles">
+                                <article class="style1">
+                                    <span class="image">
+                                        <img src="images/Compactor_1.jpg" alt="" />
+                                    </span>
+                                    <a href="#">
+                                        <h2 style="font-size:250%;">Mechanical</h2>
+                                        <div class="content">
+                                            <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                        </div>
+                                    </a>
+                                </article>
+                                <article class="style2">
+                                    <span class="image">
+                                        <img src="images/Compactor_2.jpg" alt="" />
+                                    </span>
+                                    <a href="#">
+                                        <h2 style="font-size:250%;">Electrical</h2>
+                                        <div class="content">
+                                            <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                        </div>
+                                    </a>
+                                </article>
+                                <article class="style3">
+                                    <span class="image">
+                                        <img src="images/Compactor_3.jpg" alt="" />
+                                    </span>
+                                    <a href="#">
+                                        <h2 style="font-size:250%;">Software</h2>
+                                        <div class="content">
+                                            <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                        </div>
+                                    </a>
+                                </article>
+                                <article class="style4">
+                                    <span class="image">
+                                        <img src="images/Lidar_1.jpg" alt="" />
+                                    </span>
+                                    <a href="#">
+                                        <h2 style="font-size:250%;">Lidar</h2>
+                                        <div class="content">
+                                            <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                        </div>
+                                    </a>
+                                </article>
+                                <article class="style5">
+                                    <span class="image">
+                                        <img src="images/Lidar_2.jpg" alt="" />
+                                    </span>
+                                    <a href="#">
+                                        <h2 style="font-size:250%;">Other</h2>
+                                        <div class="content">
+                                            <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                        </div>
+                                    </a>
+                                </article>
+                                <article class="style6">
+                                    <span class="image">
+                                        <img src="images/Lidar_3.jpg" alt="" />
+                                    </span>
+                                    <a href="#">
+                                        <h2 style="font-size:250%;">Other2</h2>
+                                        <div class="content">
+                                            <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                                        </div>
+                                    </a>
+                                </article>
+                            </section>
+                        </div>
+                    </div>
 				</section>
             
-		</div>
-        
-        <div>
-            <section class="tiles">
-                <article class="style1">
-                    <span class="image">
-                        <img src="images/Compactor_1.jpg" alt="" />
-                    </span>
-                    <a href="#">
-                        <h2 style="font-size:250%;">Mechanical</h2>
-                        <div class="content">
-                            <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-                        </div>
-                    </a>
-                </article>
-                <article class="style2">
-                    <span class="image">
-                        <img src="images/Compactor_2.jpg" alt="" />
-                    </span>
-                    <a href="#">
-                        <h2 style="font-size:250%;">Lorem</h2>
-                        <div class="content">
-                            <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-                        </div>
-                    </a>
-                </article>
-                <article class="style3">
-                    <span class="image">
-                        <img src="images/Compactor_3.jpg" alt="" />
-                    </span>
-                    <a href="#">
-                        <h2 style="font-size:250%;">Feugiat</h2>
-                        <div class="content">
-                            <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-                        </div>
-                    </a>
-                </article>
-                <article class="style4">
-                    <span class="image">
-                        <img src="images/Lidar_1.jpg" alt="" />
-                    </span>
-                    <a href="#">
-                        <h2 style="font-size:250%;">Tempus</h2>
-                        <div class="content">
-                            <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-                        </div>
-                    </a>
-                </article>
-                <article class="style5">
-                    <span class="image">
-                        <img src="images/Lidar_2.jpg" alt="" />
-                    </span>
-                    <a href="#">
-                        <h2 style="font-size:250%;">Aliquam</h2>
-                        <div class="content">
-                            <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-                        </div>
-                    </a>
-                </article>
-                <article class="style6">
-                    <span class="image">
-                        <img src="images/Lidar_3.jpg" alt="" />
-                    </span>
-                    <a href="#">
-                        <h2 style="font-size:250%;">Veroeros</h2>
-                        <div class="content">
-                            <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-                        </div>
-                    </a>
-                </article>
-            </section>
         </div>
 
 		<!-- Scripts -->
