--- a/Website/project_video.html
+++ b/Website/project_video.html
@@ -10,13 +10,14 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body>
-        <div class="video-background">
-            <div class="video-foreground">
-                <iframe id="custom_video" src="https://www.youtube.com/embed/i1KmBP7s_ik?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
-            
+        <div id="page-wrapper">
+            <div class="video-background">
+                <div class="video-foreground">
+                    <iframe id="custom_video" src="https://www.youtube.com/embed/i1KmBP7s_ik?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+
+                </div>
             </div>
         </div>
-        
         <!-- Scripts -->
         <script src="assets/js/jquery.min.js"></script>
         <script src="assets/js/jquery.dropotron.min.js"></script>
