--- a/Website/team.html
+++ b/Website/team.html
@@ -42,61 +42,66 @@
                     <p>We're Awesome</p>
                 </header>
                 
-                <section class="box alt">
-                    <h2>
-                        <span class="image left">
-                            <img src="images/people/CedricK_circle.png" alt>
-                        </span>
-                        Cedric Kim
-                    </h2>
-                    <h4>
-                        Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.
-                    </h4>
-                </section>
-                <section class="box alt">
-                    <h2>
-                        <span class="image right">
-                            <img src="images/people/JeremyG_circle.png" alt>
-                        </span>
-                        Jeremy Garcia
-                    </h2>
-                    <h4>
-                        Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.
-                    </h4>
-                </section>
-                <section class="box alt">
-                    <h2>
-                        <span class="image left">
-                            <img src="images/people/DanielD_circle.png" alt>
-                        </span>
-                        Daniel Daugherty
-                    </h2>
-                    <h4>
-                        Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.
-                    </h4>
-                </section>
-                <section class="box alt">
-                    <h2>
-                        <span class="image right">
-                            <img src="images/people/KevinZ_circle.png" alt>
-                        </span>
-                        Kevin Zhang
-                    </h2>
-                    <h4>
-                        Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.
-                    </h4>
-                </section>
-                <section class="box alt">
-                    <h2>
-                        <span class="image left">
-                            <img src="images/people/KevinG_circle.png" alt>
-                        </span>
-                        Kevin Guo
-                    </h2>
-                    <h4>
-                        Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.
-                    </h4>
-                </section>
+                <div class="row">
+                    <div class="12u">
+                        <section class="box alt">
+                            <h2>
+                                <span class="image left">
+                                    <img src="images/people/CedricK_circle.png" alt>
+                                </span>
+                                Cedric Kim
+                            </h2>
+                            <h4>
+                                Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.
+                            </h4>
+                        </section>
+                        <section class="box alt">
+                            <h2>
+                                <span class="image right">
+                                    <img src="images/people/JeremyG_circle.png" alt>
+                                </span>
+                                Jeremy Garcia
+                            </h2>
+                            <h4>
+                                Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.
+                            </h4>
+                        </section>
+                        <section class="box alt">
+                            <h2>
+                                <span class="image left">
+                                    <img src="images/people/DanielD_circle.png" alt>
+                                </span>
+                                Daniel Daugherty
+                            </h2>
+                            <h4>
+                                Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.
+                            </h4>
+                        </section>
+                        <section class="box alt">
+                            <h2>
+                                <span class="image right">
+                                    <img src="images/people/KevinZ_circle.png" alt>
+                                </span>
+                                Kevin Zhang
+                            </h2>
+                            <h4>
+                                Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.
+                            </h4>
+                        </section>
+                        <section class="box alt">
+                            <h2>
+                                <span class="image left">
+                                    <img src="images/people/KevinG_circle.png" alt>
+                                </span>
+                                Kevin Guo
+                            </h2>
+                            <h4>
+                                Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.
+                            </h4>
+                        </section>
+                    </div>
+                </div>
+
             </section>
         </div>
             <!-- Scripts -->
