--- a/Website/learn_more.html
+++ b/Website/learn_more.html
@@ -21,18 +21,12 @@
                             <li>
 								<a href="learn_more.html" class="icon fa-angle-down">Learn More</a>
 								<ul>
+                                    <li><a href="">Prototype</a></li>
 									<li><a href="lidar.html">Lidar</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li><a href="elements.html">Elements</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option One</a></li>
-											<li><a href="#">Option Two</a></li>
-											<li><a href="#">Option Three</a></li>
-											<li><a href="#">Option Four</a></li>
-										</ul>
-									</li>
+									<li><a href="">Human Body Detection</a></li>
+									<li><a href="">Motion Tracking</a></li>
+                                    <li><a href="">Mechanical Structure</a></li>
+                                    <li><a href="">Catapult Mechanism</a></li>
 								</ul>
 							</li>
 						</ul>
@@ -53,7 +47,7 @@
                                         <img src="images/Compactor_1.jpg" alt="" />
                                     </span>
                                     <a href="#">
-                                        <h2 style="font-size:250%;">Mechanical</h2>
+                                        <h2 style="font-size:250%;">Prototype</h2>
                                         <div class="content">
                                             <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
                                         </div>
@@ -61,10 +55,10 @@
                                 </article>
                                 <article class="style2">
                                     <span class="image">
-                                        <img src="images/Compactor_2.jpg" alt="" />
+                                        <img src="images/Lidar_1.jpg" alt="" />
                                     </span>
-                                    <a href="#">
-                                        <h2 style="font-size:250%;">Electrical</h2>
+                                    <a href="lidar.html">
+                                        <h2 style="font-size:250%;">Lidar</h2>
                                         <div class="content">
                                             <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
                                         </div>
@@ -72,10 +66,10 @@
                                 </article>
                                 <article class="style3">
                                     <span class="image">
-                                        <img src="images/Compactor_3.jpg" alt="" />
+                                        <img src="images/Compactor_2.jpg" alt="" />
                                     </span>
                                     <a href="#">
-                                        <h2 style="font-size:250%;">Software</h2>
+                                        <h2 style="font-size:250%;">Human Body Detection</h2>
                                         <div class="content">
                                             <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
                                         </div>
@@ -83,10 +77,10 @@
                                 </article>
                                 <article class="style4">
                                     <span class="image">
-                                        <img src="images/Lidar_1.jpg" alt="" />
+                                        <img src="images/Compactor_3.jpg" alt="" />
                                     </span>
                                     <a href="#">
-                                        <h2 style="font-size:250%;">Lidar</h2>
+                                        <h2 style="font-size:250%;">Motion Tracking</h2>
                                         <div class="content">
                                             <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
                                         </div>
@@ -97,7 +91,7 @@
                                         <img src="images/Lidar_2.jpg" alt="" />
                                     </span>
                                     <a href="#">
-                                        <h2 style="font-size:250%;">Other</h2>
+                                        <h2 style="font-size:250%;">Mechanical Structure</h2>
                                         <div class="content">
                                             <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
                                         </div>
@@ -108,7 +102,7 @@
                                         <img src="images/Lidar_3.jpg" alt="" />
                                     </span>
                                     <a href="#">
-                                        <h2 style="font-size:250%;">Other2</h2>
+                                        <h2 style="font-size:250%;">Catapult Mechanism</h2>
                                         <div class="content">
                                             <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
                                         </div>
