final website structure implemented

--- a/Website/how_it_works.html
+++ b/Website/how_it_works.html
@@ -13,25 +13,33 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header">
-					<nav id="nav">
-						<ul>
+                <header id="header">
+                    <nav id="nav">
+                        <ul>
                             <li><a href="index.html" class="button">Home</a></li>
-							<li><a href="team.html" class="button">The Team</a></li>
+                            <li><a href="team.html" class="button">The Team</a></li>
                             <li>
-								<a href="learn_more.html" class="icon fa-angle-down">Learn More</a>
-								<ul>
-                                    <li><a href="">Prototype</a></li>
-									<li><a href="lidar.html">Lidar</a></li>
-									<li><a href="">Human Body Detection</a></li>
-									<li><a href="">Motion Tracking</a></li>
-                                    <li><a href="">Mechanical Structure</a></li>
-                                    <li><a href="">Catapult Mechanism</a></li>
-								</ul>
-							</li>
-						</ul>
-					</nav>
-				</header>
+                                <a href="#" class="icon fa-angle-down">Learn More</a>
+                                <ul>
+                                    <li><a href="system_overview.html">System Overview</a></li>
+                                    <li>
+                                        <a href="how_it_works.html">How it works</a>
+                                        <ul>
+                                            <li><a href="mechanical.html">Mechanical</a></li>
+                                            <li><a href="electrical.html">Electrical</a></li>
+                                            <li><a href="software.html">Software</a></li>
+                                            <li><a href="firmware.html">Firmware</a></li>
+                                            <li><a href="prototype.html">Prototype</a></li>
+                                            <li><a href="sensors.html">Sensors</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="budget.html">Budget</a></li>
+                                    <li><a href="journey.html">Our Journey</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </nav>
+                </header>
 
 			<!-- Main -->
 				<section id="main" class="container">
@@ -44,10 +52,10 @@
                             <section class="tiles">
                                 <article class="style1">
                                     <span class="image">
-                                        <img src="images/Compactor_1.jpg" alt="" />
+                                        <img src="images/Compactor/Compactor_1.jpg" alt="" />
                                     </span>
-                                    <a href="#">
-                                        <h2 style="font-size:250%;">Prototype</h2>
+                                    <a href="mechanical.html">
+                                        <h2 style="font-size:250%;">Mechanical </h2>
                                         <div class="content">
                                             <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
                                         </div>
@@ -55,10 +63,10 @@
                                 </article>
                                 <article class="style2">
                                     <span class="image">
-                                        <img src="images/Lidar_1.jpg" alt="" />
+                                        <img src="images/Lidar/Lidar_1.jpg" alt="" />
                                     </span>
-                                    <a href="lidar.html">
-                                        <h2 style="font-size:250%;">Lidar</h2>
+                                    <a href="electrical.html">
+                                        <h2 style="font-size:250%;">Electrical</h2>
                                         <div class="content">
                                             <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
                                         </div>
@@ -66,10 +74,10 @@
                                 </article>
                                 <article class="style3">
                                     <span class="image">
-                                        <img src="images/Compactor_2.jpg" alt="" />
+                                        <img src="images/Compactor/Compactor_2.jpg" alt="" />
                                     </span>
-                                    <a href="#">
-                                        <h2 style="font-size:250%;">Human Body Detection</h2>
+                                    <a href="software.html">
+                                        <h2 style="font-size:250%;">Software</h2>
                                         <div class="content">
                                             <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
                                         </div>
@@ -77,10 +85,10 @@
                                 </article>
                                 <article class="style4">
                                     <span class="image">
-                                        <img src="images/Compactor_3.jpg" alt="" />
+                                        <img src="images/Compactor/Compactor_3.jpg" alt="" />
                                     </span>
-                                    <a href="#">
-                                        <h2 style="font-size:250%;">Motion Tracking</h2>
+                                    <a href="firmware.html">
+                                        <h2 style="font-size:250%;">Firmware</h2>
                                         <div class="content">
                                             <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
                                         </div>
@@ -88,10 +96,10 @@
                                 </article>
                                 <article class="style5">
                                     <span class="image">
-                                        <img src="images/Lidar_2.jpg" alt="" />
+                                        <img src="images/Lidar/Lidar_2.jpg" alt="" />
                                     </span>
-                                    <a href="#">
-                                        <h2 style="font-size:250%;">Mechanical Structure</h2>
+                                    <a href="prototype.html">
+                                        <h2 style="font-size:250%;">Prototype</h2>
                                         <div class="content">
                                             <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
                                         </div>
@@ -99,10 +107,10 @@
                                 </article>
                                 <article class="style6">
                                     <span class="image">
-                                        <img src="images/Lidar_3.jpg" alt="" />
+                                        <img src="images/Lidar/Lidar_3.jpg" alt="" />
                                     </span>
-                                    <a href="#">
-                                        <h2 style="font-size:250%;">Catapult Mechanism</h2>
+                                    <a href="sensors.html">
+                                        <h2 style="font-size:250%;">Sensors</h2>
                                         <div class="content">
                                             <p style="font-size:150%;">Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
                                         </div>
@@ -113,6 +121,21 @@
                     </div>
 				</section>
             
+                <footer id="footer">
+                    <ul class="copyright">
+                        <li>
+                            <a href="http://poe.olin.edu/">Principles of Engineering Fall 2016
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://www.olin.edu/">Olin College</a>
+                        </li>
+                        <li>
+                            Designed with
+                            <a href="http://html5up.net">HTML5 UP</a>
+                        </li>
+                    </ul>
+                </footer>
         </div>
 
 		<!-- Scripts -->
