--- a/Website/sensors.html
+++ b/Website/sensors.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Lidar</title>
+		<title>Sensors</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -13,41 +13,44 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header">
-					<nav id="nav">
-						<ul>
+                <header id="header">
+                    <nav id="nav">
+                        <ul>
                             <li><a href="index.html" class="button">Home</a></li>
-							<li><a href="team.html" class="button">The Team</a></li>
+                            <li><a href="team.html" class="button">The Team</a></li>
                             <li>
-								<a href="learn_more.html" class="icon fa-angle-down">Learn More</a>
-								<ul>
-									<li><a href="lidar.html">Lidar</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li><a href="elements.html">Elements</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option One</a></li>
-											<li><a href="#">Option Two</a></li>
-											<li><a href="#">Option Three</a></li>
-											<li><a href="#">Option Four</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-						</ul>
-					</nav>
-				</header>
+                                <a href="#" class="icon fa-angle-down">Learn More</a>
+                                <ul>
+                                    <li><a href="system_overview.html">System Overview</a></li>
+                                    <li>
+                                        <a href="how_it_works.html">How it works</a>
+                                        <ul>
+                                            <li><a href="mechanical.html">Mechanical</a></li>
+                                            <li><a href="electrical.html">Electrical</a></li>
+                                            <li><a href="software.html">Software</a></li>
+                                            <li><a href="firmware.html">Firmware</a></li>
+                                            <li><a href="prototype.html">Prototype</a></li>
+                                            <li><a href="sensors.html">Sensors</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="budget.html">Budget</a></li>
+                                    <li><a href="journey.html">Our Journey</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </nav>
+                </header>
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<h2>Lidar</h2>
+						<h2>Sensors</h2>
 						<p>look it works</p>
 					</header>
                     
                     <div class="row">
 						<div class="12u">
                             <div class="box">
+                                <h3>Homemade Lidar</h3>
                                 <!--<div class="row">
                                     <iframe height="500" class="image fit" src="https://www.youtube.com/embed/cUEJAdhIl0o?rel=0&autoplay=0" frameborder="0" allowfullscreen onload="resizeIframe(this)"></iframe>
                                 </div>-->
@@ -56,7 +59,6 @@
                                         <source src="videos/lidar_2.mp4" type="video/mp4">
                                     </video>
                                 </div>
-                                <h3>Look it works</h3>
                                 <p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p>
                             </div>
                         </div>
@@ -66,22 +68,22 @@
                             <div class="box">
                                 <section class="box">
 									<h3>Image</h3>
-									<span class="image fit"><img src="images/Lidar_1.jpg" alt="" /></span>
+									<span class="image fit"><img src="images/Lidar/Lidar_1.jpg" alt="" /></span>
 									<div class="box alt">
 										<div class="row no-collapse 50% uniform">
-											<div class="4u"><span class="image fit"><img src="images/Lidar_1.jpg" alt="" /></span></div>
-											<div class="4u"><span class="image fit"><img src="images/Lidar_2.jpg" alt="" /></span></div>
-											<div class="4u"><span class="image fit"><img src="images/Lidar_3.jpg" alt="" /></span></div>
+											<div class="4u"><span class="image fit"><img src="images/Lidar/Lidar_1.jpg" alt="" /></span></div>
+											<div class="4u"><span class="image fit"><img src="images/Lidar/Lidar_2.jpg" alt="" /></span></div>
+											<div class="4u"><span class="image fit"><img src="images/Lidar/Lidar_3.jpg" alt="" /></span></div>
 										</div>
 										<div class="row no-collapse 50% uniform">
-											<div class="4u"><span class="image fit"><img src="images/Lidar_1.jpg" alt="" /></span></div>
-											<div class="4u"><span class="image fit"><img src="images/Lidar_2.jpg" alt="" /></span></div>
-											<div class="4u"><span class="image fit"><img src="images/Lidar_3.jpg" alt="" /></span></div>
+											<div class="4u"><span class="image fit"><img src="images/Lidar/Lidar_1.jpg" alt="" /></span></div>
+											<div class="4u"><span class="image fit"><img src="images/Lidar/Lidar_2.jpg" alt="" /></span></div>
+											<div class="4u"><span class="image fit"><img src="images/Lidar/Lidar_3.jpg" alt="" /></span></div>
 										</div>
 										<div class="row no-collapse 50% uniform">
-											<div class="4u"><span class="image fit"><img src="images/Lidar_1.jpg" alt="" /></span></div>
-											<div class="4u"><span class="image fit"><img src="images/Lidar_2.jpg" alt="" /></span></div>
-											<div class="4u"><span class="image fit"><img src="images/Lidar_3.jpg" alt="" /></span></div>
+											<div class="4u"><span class="image fit"><img src="images/Lidar/Lidar_1.jpg" alt="" /></span></div>
+											<div class="4u"><span class="image fit"><img src="images/Lidar/Lidar_2.jpg" alt="" /></span></div>
+											<div class="4u"><span class="image fit"><img src="images/Lidar/Lidar_3.jpg" alt="" /></span></div>
 										</div>
 									</div>
 								</section>
