--- a/Website/team.html
+++ b/Website/team.html
@@ -10,31 +10,34 @@
     <body>
         <div id="page-wrapper">
 			<!-- Header -->
-				<header id="header">
-					<nav id="nav">
-						<ul>
+                <header id="header">
+                    <nav id="nav">
+                        <ul>
                             <li><a href="index.html" class="button">Home</a></li>
-							<li><a href="team.html" class="button">The Team</a></li>
+                            <li><a href="team.html" class="button">The Team</a></li>
                             <li>
-								<a href="learn_more.html" class="icon fa-angle-down">Learn More</a>
-								<ul>
-									<li><a href="">Mechanical</a></li>
-									<li><a href="">Electrical</a></li>
-									<li><a href="">Software</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option One</a></li>
-											<li><a href="#">Option Two</a></li>
-											<li><a href="#">Option Three</a></li>
-											<li><a href="#">Option Four</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-						</ul>
-					</nav>
-				</header>
+                                <a href="#" class="icon fa-angle-down">Learn More</a>
+                                <ul>
+                                    <li><a href="system_overview.html">System Overview</a></li>
+                                    <li>
+                                        <a href="how_it_works.html">How it works</a>
+                                        <ul>
+                                            <li><a href="mechanical.html">Mechanical</a></li>
+                                            <li><a href="electrical.html">Electrical</a></li>
+                                            <li><a href="software.html">Software</a></li>
+                                            <li><a href="firmware.html">Firmware</a></li>
+                                            <li><a href="prototype.html">Prototype</a></li>
+                                            <li><a href="sensors.html">Sensors</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="budget.html">Budget</a></li>
+                                    <li><a href="journey.html">Our Journey</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </nav>
+                </header>
+            
             <section id="main" class="container">
 
                 <header class="major">
@@ -103,6 +106,21 @@
                 </div>
 
             </section>
+            <footer id="footer">
+                    <ul class="copyright">
+                        <li>
+                            <a href="http://poe.olin.edu/">Principles of Engineering Fall 2016
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://www.olin.edu/">Olin College</a>
+                        </li>
+                        <li>
+                            Designed with
+                            <a href="http://html5up.net">HTML5 UP</a>
+                        </li>
+                    </ul>
+            </footer>
         </div>
             <!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
